k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend-container
        image: shubhamdevops/backend-app:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  type: NodePort              # expose on node port
  selector:
    app: backend
  ports:
    - port: 8080              # ClusterIP port
      targetPort: 8080        # Pod port
      nodePort: 30080         # NodePort range 30000–32767
